# place

./: .gitignore  .mcp.json  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: CHANGELOG.md
installer/: setup.iss
source/: ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: DynamicVoiceSpaceEQ.h  MidHighPassFilter.h  MidSideProcessor.h  SideCompensationEQ.h  SideHighPassFilter.h  SidechainDetector.h  StaticVoiceSpaceEQ.h
source/ui/: ModeSelector.cpp  ModeSelector.h  PlaceLookAndFeel.cpp  PlaceLookAndFeel.h  RotaryKnob.cpp  RotaryKnob.h  StereoFieldVisualizer.cpp  StereoFieldVisualizer.h
